fix: body container can scroll on mobile phone

--- a/styles/global.scss
+++ b/styles/global.scss
@@ -2,6 +2,9 @@ html,
 body {
   padding: 0;
   margin: 0;
+  width: 100vw;
+  height: 100vh;
+  overflow: hidden;
   line-height: 1.6;
   font-size: 18px;
 }
